// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux/actions/serviceApi/forgotPassword error 1`] = `
Array [
  Object {
    "payload": Object {
      "dataKey": "passwordForgotten",
      "manifest": Object {
        "reserved": true,
      },
      "request": Object {
        "data": Object {
          "email": "salesman@onaclover.com",
        },
        "method": "post",
        "url": "/users/password",
      },
    },
    "type": "serviceApi/FORGOT_PASSWORD",
  },
  Object {
    "error": Object {
      "message": "serviceApi/FORGOT_PASSWORD request failed",
      "response": Object {
        "data": Object {
          "errors": Array [
            Object {
              "message": "serviceApi/FORGOT_PASSWORD request failed",
            },
          ],
        },
        "status": 500,
      },
    },
    "meta": Object {
      "previousAction": Object {
        "payload": Object {
          "dataKey": "passwordForgotten",
          "manifest": Object {
            "reserved": true,
          },
          "request": Object {
            "data": Object {
              "email": "salesman@onaclover.com",
            },
            "method": "post",
            "url": "/users/password",
          },
        },
        "type": "serviceApi/FORGOT_PASSWORD",
      },
    },
    "type": "serviceApi/FORGOT_PASSWORD:ERROR",
  },
]
`;

exports[`redux/actions/serviceApi/forgotPassword success 1`] = `
Array [
  Object {
    "payload": Object {
      "dataKey": "passwordForgotten",
      "manifest": Object {
        "reserved": true,
      },
      "request": Object {
        "data": Object {
          "email": "salesman@onaclover.com",
        },
        "method": "post",
        "url": "/users/password",
      },
    },
    "type": "serviceApi/FORGOT_PASSWORD",
  },
  Object {
    "meta": Object {
      "previousAction": Object {
        "payload": Object {
          "dataKey": "passwordForgotten",
          "manifest": Object {
            "reserved": true,
          },
          "request": Object {
            "data": Object {
              "email": "salesman@onaclover.com",
            },
            "method": "post",
            "url": "/users/password",
          },
        },
        "type": "serviceApi/FORGOT_PASSWORD",
      },
    },
    "payload": Object {
      "data": Object {},
    },
    "type": "serviceApi/FORGOT_PASSWORD:SUCCESS",
  },
]
`;
